2006-07-25  Yevgen Muntyan  <muntyan@tamu.edu>

	* gtksourceview/Makefile.am: reverted last commit, it was made by 
	mistake.

2006-07-25  Yevgen Muntyan  <muntyan@tamu.edu>

	* gtksourceview/libegg/regex/pcre/AUTHORS:
	* gtksourceview/libegg/regex/pcre/ChangeLog:
	* gtksourceview/libegg/regex/pcre/COPYING:
	* gtksourceview/libegg/regex/pcre/LICENSE:
	* gtksourceview/libegg/regex/pcre/NEWS:
	* gtksourceview/libegg/regex/pcre/README:
	added pcre documentation files.

	* gtksourceview/libegg/regex/pcre/pcre.h:
	added bunch of #define's to prefix all exported pcre symbols
	with _egg_regex_.
	* gtksourceview/libegg/regex/pcre/pcre_chartables.c:
	#include "pcre_internal.h" to pull those #define's.

2006-07-25  Yevgen Muntyan  <muntyan@tamu.edu>

	* gtksourceview/gtksourcecontextengine.c: fixed bug with tags hash 
	table - it g_slist_free'd values, and led to funny memory corruption.
	* gtksourceview/gtksourcelanguage-parser-2.c: (replace_delimiter): 
	fixed a memory leak.
	* gtksourceview/language-specs/c.lang: added comments into preprocessor
	context.
	* gtksourceview/language-specs/cpp.lang: added globs.
	* gtksourceview/language-specs/language2.rng: corrected "mimetypes" and
	"globs" attributes, so that each of them is optional, not both as a pair.

2006-07-24  Yevgen Muntyan  <muntyan@tamu.edu>

	* gtksourceview/gtksourcecontextengine.c: (find_insertion_place),
	(update_tree): bugs.

2006-07-24  Yevgen Muntyan  <muntyan@tamu.edu>

	* gtksourceview/gtksourcecontextengine.c: (delete_range): do not
	invalidate deletion place, update_tree() takes care about it.

2006-07-24  Yevgen Muntyan  <muntyan@tamu.edu>

	Updated EggRegex and pcre, updated build infrastructure for it,
	made it optionally use system pcre. Made the library export only 
	public symbols.

	* docs/reference/gtksourceview.types:
	* docs/reference/Makefile.am: made gtk-doc work again,
	without PrintJob and old removed classes.

	* gtksourceview/libegg/regex/*: synced with Marco's eggregex