@@ -26,13 +26,9 @@
     </styles>
 
     <definitions>
-        <define-regex id="prefix">
-            [a-zA-Z_][a-zA-Z0-9._-]*
-        </define-regex>
+        <define-regex id="prefix">[a-zA-Z_][a-zA-Z0-9._-]*</define-regex>
 
-        <define-regex id="name">
-            [a-zA-Z_][a-zA-Z0-9.:_-]*
-        </define-regex>
+        <define-regex id="name">[a-zA-Z_][a-zA-Z0-9.:_-]*</define-regex>
 
         <context id="entity" style-ref="entity">
             <match>&amp;\%{name};</match>
